--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -1,6 +1,9 @@
-itemGroup.mubble_items_tab=Mubble Items
+--- CREATIVE TABS ---
 itemGroup.mubble_blocks_tab=Mubble Blocks
+itemGroup.mubble_items_tab=Mubble Items
+itemGroup.mubble_costumes_tab=Mubble Costumes
 
+--- BLOCKS ---
 tile.vanadium_block.name=Block of Vanadium
 tile.vanadium_ore.name=Vanadium Ore
 tile.red_bricks.name=Red Bricks
@@ -19,6 +22,19 @@ tile.brick_block.name=Brick Block
 tile.golden_brick_block.name=Golden Brick Block
 tile.note_block.name=Note Block
 tile.super_note_block.name=Super Note Block
+tile.fire_flower.name=Fire Flower
+tile.ice_flower.name=Ice Flower
+tile.boomerang_flower.name=Boomerang Flower
+tile.cloud_flower.name=Cloud Flower
+tile.cloud_block.name=Cloud Block
+tile.blue_mushroom.name=Blue Mushroom
+tile.green_mushroom.name=Green Mushroom
+tile.yellow_mushroom.name=Yellow Mushroom
+tile.purple_mushroom.name=Purple Mushroom
+tile.blue_mushroom_block.name=Blue Mushroom Block
+tile.green_mushroom_block.name=Green Mushroom Block
+tile.yellow_mushroom_block.name=Yellow Mushroom Block
+tile.purple_mushroom_block.name=Purple Mushroom Block
 
 tile.blue_tetris_block.name=Blue Tetris Block
 tile.light_blue_tetris_block.name=Light Blue Tetris Block
@@ -39,32 +55,71 @@ tile.cyan_bricks.name=Cyan Bricks
 tile.elder_pebbles.name=Elder Pebbles
 tile.space_matter.name=Space Matter
 
+tile.vampire_stone.name=Vampire Stone
+tile.medusa_stone.name=Medusa's Stone
+tile.medusa_bricks.name=Medusa's Bricks
+tile.blue_candy_cane_pillar.name=Blue Candy Cane Pillar
+tile.green_candy_cane_pillar.name=Green Candy Cane Pillar
+tile.yellow_candy_cane_pillar.name=Yellow Candy Cane Pillar
+tile.red_candy_cane_pillar.name=Red Candy Cane Pillar
+
+--- ITEMS ---
 item.vanadium.name=Vanadium
 item.wheat_flour.name=Wheat Flour
 item.caramel_cube.name=Caramel Cube
 item.crepe.name=Crêpe
 item.chocolate_crepe.name=Chocolate Crêpe
 item.caramel_crepe.name=Caramel Crêpe
+item.candy_cane.name=Candy Cane
 
 item.super_mushroom.name=Super Mushroom
 item.peach.name=Peach
+item.cape_feather.name=Cape Feather
 item.super_star.name=Super Star
 item.yellow_coin.name=Yellow Coin
 item.red_coin.name=Red Coin
 item.blue_coin.name=Blue Coin
 item.cappy.name=Cappy
+item.luigi_cap.name=Luigi's Cap
+item.wario_cap.name=Wario's Cap
+item.waluigi_cap.name=Waluigi's Cap
+item.invisibility_cap.name=Invisibility Cap
+item.wing_cap.name=Wing Cap
+item.princess_peach_crown.name=Princess Peach's Crown
+item.princess_daisy_crown.name=Princess Daisy's Crown
+item.super_crown.name=Super Crown
 
+item.bandana.name=Bandana
+
+item.smash_ball.name=Smash Ball
+
+item.headphones.name=Headphones
+item.record_blank.name=Blank Music Disc
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.ebb_flow_demo.desc=Splatoon 2 - Ebb & Flow Demo
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
+item.mayro_cap.name=Mayro's Cap
+item.noteblock_head.name=NoteBlock's Head
+item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
+item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
+item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
+item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
+
+--- ENTITIES ---
 entity.toad.name=Toad
+entity.chincho.name=Chincho
 
-subtitles.block.question_block.loot.super_mushroom=? Block drops super mushroom
+--- SUBTITLES ---
+subtitles.block.question_block.loot.power_up=? Block drops power up
 subtitles.block.question_block.loot.coin=? Block drops coin
+subtitles.item.cape_feather.use=Cape Feather used
+subtitles.item.smash_ball.use=Smash Ball used
 subtitles.entity.toad.ambient=Toad mumbles
 subtitles.entity.toad.hurt=Toad hurts
 subtitles.entity.toad.death=Toad dies
 
+--- ADVANCEMENTS ---
 advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=A grand new journey
 advancements.mubble.get_coin.title=It's mine! Gold!
