--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -1,6 +1,9 @@
-itemGroup.mubble_items_tab=Objetos de Mubble
+--- CREATIVE TABS ---
 itemGroup.mubble_blocks_tab=Bloques de Mubble
+itemGroup.mubble_items_tab=Objetos de Mubble
+itemGroup.mubble_costumes_tab=<newline>
 
+--- BLOCKS ---
 tile.vanadium_block.name=Bloque de vanadio 
 tile.vanadium_ore.name=Mena de vanadio
 tile.red_bricks.name=Ladrillos rojos
@@ -19,6 +22,19 @@ tile.brick_block.name=Bloque de ladrillo
 tile.golden_brick_block.name=Bloque de ladrillo dorado
 tile.note_block.name=Bloque nota
 tile.super_note_block.name=Súper bloque nota
+tile.fire_flower.name=Flor de fuego
+tile.ice_flower.name=Flor de hielo
+tile.boomerang_flower.name=Flor boomerang
+tile.cloud_flower.name=Flor nube
+tile.cloud_block.name=Bloque nube
+tile.blue_mushroom.name=<newline>
+tile.green_mushroom.name=<newline>
+tile.yellow_mushroom.name=<newline>
+tile.purple_mushroom.name=<newline>
+tile.blue_mushroom_block.name=<newline>
+tile.green_mushroom_block.name=<newline>
+tile.yellow_mushroom_block.name=<newline>
+tile.purple_mushroom_block.name=<newline>
 
 tile.blue_tetris_block.name=Bloque Tetris azul
 tile.light_blue_tetris_block.name=Bloque Tetris azul claro
@@ -39,6 +55,15 @@ tile.cyan_bricks.name=Ladrillos cian
 tile.elder_pebbles.name=Guijarros antiguos
 tile.space_matter.name=Materia espacial
 
+tile.vampire_stone.name=<newline>
+tile.medusa_stone.name=<newline>
+tile.medusa_bricks.name=<newline>
+tile.blue_candy_cane_pillar.name=<newline>
+tile.green_candy_cane_pillar.name=<newline>
+tile.yellow_candy_cane_pillar.name=<newline>
+tile.red_candy_cane_pillar.name=<newline>
+
+--- ITEMS ---
 item.vanadium.name=Vanadio
 item.wheat_flour.name=Harina de trigo
 item.caramel_cube.name=Cubo de caramelo
@@ -48,23 +73,52 @@ item.caramel_crepe.name=Crepe de caramelo
 
 item.super_mushroom.name=Súper champiñón
 item.peach.name=Durazno
+item.cape_feather.name=<newline>
 item.super_star.name=Superestrella
 item.yellow_coin.name=Moneda amarilla
 item.red_coin.name=Moneda roja
 item.blue_coin.name=Moneda azul
 item.cappy.name=Cappy
+item.luigi_cap.name=<newline>
+item.wario_cap.name=<newline>
+item.waluigi_cap.name=<newline>
+item.invisibility_cap.name=<newline>
+item.wing_cap.name=<newline>
+item.princess_peach_crown.name=<newline>
+item.princess_daisy_crown.name=<newline>
+item.super_crown.name=Supercorona
 
+item.bandana.name=<newline>
+
+item.smash_ball.name=Bola Smash
+
+item.headphones.name=<newline>
+item.record_blank.name=<newline>
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.ebb_flow_demo.desc=Splatoon 2 - Ebb & Flow Demo
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
+item.mayro_cap.name=<newline>
+item.noteblock_head.name=<newline>
+item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
+item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
+item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
+item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
+
+--- ENTITIES ---
 entity.toad.name=Toad
+entity.chincho.name=<newline>
 
+--- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=Bloque ? suelta un súper champiñón
 subtitles.block.question_block.loot.coin=Bloque ? suelta una moneda
+subtitles.item.cape_feather.use=<newline>
+subtitles.item.smash_ball.use=<newline>
 subtitles.entity.toad.ambient=Toad balbucea
 subtitles.entity.toad.hurt=Toad herido
 subtitles.entity.toad.death=Toad muere
 
+--- ADVANCEMENTS ---
 advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=Una nueva aventura
 advancements.mubble.get_coin.title=¡Es mío! ¡Oro!
