--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -1,6 +1,9 @@
-itemGroup.mubble_items_tab=Objets Mubble
+--- CREATIVE TABS ---
 itemGroup.mubble_blocks_tab=Blocs Mubble
+itemGroup.mubble_items_tab=Objets Mubble
+itemGroup.mubble_costumes_tab=<newline>
 
+--- BLOCKS ---
 tile.vanadium_block.name=Bloc de vanadium
 tile.vanadium_ore.name=Minerai de vanadium
 tile.red_bricks.name=Briques rouges
@@ -19,6 +22,19 @@ tile.brick_block.name=Bloc de brique
 tile.golden_brick_block.name=Bloc de brique dorée
 tile.note_block.name=Bloc note
 tile.super_note_block.name=Super bloc note
+tile.fire_flower.name=Fleur de feu
+tile.ice_flower.name=Fleur de glace
+tile.boomerang_flower.name=	Fleur boomerang
+tile.cloud_flower.name=Fleur nuage
+tile.cloud_block.name=Bloc nuage
+tile.blue_mushroom.name=<newline>
+tile.green_mushroom.name=<newline>
+tile.yellow_mushroom.name=<newline>
+tile.purple_mushroom.name=<newline>
+tile.blue_mushroom_block.name=<newline>
+tile.green_mushroom_block.name=<newline>
+tile.yellow_mushroom_block.name=<newline>
+tile.purple_mushroom_block.name=<newline>
 
 tile.blue_tetris_block.name=Bloc Tetris bleu
 tile.light_blue_tetris_block.name=Bloc Tetris bleu clair
@@ -39,6 +55,15 @@ tile.cyan_bricks.name=Briques cyan
 tile.elder_pebbles.name=Anciens galets
 tile.space_matter.name=Matière spatiale
 
+tile.vampire_stone.name=Roche Vampire
+tile.medusa_stone.name=Roche de Méduse
+tile.medusa_bricks.name=Briques de Méduse
+tile.blue_candy_cane_pillar.name=<newline>
+tile.green_candy_cane_pillar.name=<newline>
+tile.yellow_candy_cane_pillar.name=<newline>
+tile.red_candy_cane_pillar.name=<newline>
+
+--- ITEMS ---
 item.vanadium.name=Vanadium
 item.wheat_flour.name=Farine de blé
 item.caramel_cube.name=Cube de caramel
@@ -48,23 +73,52 @@ item.caramel_crepe.name=Crêpe au caramel
 
 item.super_mushroom.name=Super champignon
 item.peach.name=Pêche
+item.cape_feather.name=<newline>
 item.super_star.name=Super étoile
 item.yellow_coin.name=Pièce jaune
 item.red_coin.name=Pièce rouge
 item.blue_coin.name=Pièce bleue
 item.cappy.name=Cappy
+item.luigi_cap.name=<newline>
+item.wario_cap.name=<newline>
+item.waluigi_cap.name=<newline>
+item.invisibility_cap.name=<newline>
+item.wing_cap.name=<newline>
+item.princess_peach_crown.name=<newline>
+item.princess_daisy_crown.name=<newline>
+item.super_crown.name=Super couronne
 
+item.bandana.name=Bandana
+
+item.smash_ball.name=Balle Smash
+
+item.headphones.name=<newline>
+item.record_blank.name=<newline>
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.ebb_flow_demo.desc=Splatoon 2 - Ebb & Flow Demo
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
+item.mayro_cap.name=<newline>
+item.noteblock_head.name=<newline>
+item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
+item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
+item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
+item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
+
+--- ENTITIES ---
 entity.toad.name=Toad
+entity.chincho.name=<newline>
 
+--- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=Super champignon sorti d'un bloc ?
 subtitles.block.question_block.loot.coin=Pièce sortie d'un bloc ?
+subtitles.item.cape_feather.use=<newline>
+subtitles.item.smash_ball.use=<newline>
 subtitles.entity.toad.ambient=Marmonnement de Toad
 subtitles.entity.toad.hurt=Toad blessé
 subtitles.entity.toad.death=Toad qui meurt
 
+--- ADVANCEMENTS ---
 advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=Un tout nouveau voyage
 advancements.mubble.get_coin.title=C'est à moi ! De l'or !
