--- a/resources/assets/mubble/lang/io.lang
+++ b/resources/assets/mubble/lang/io.lang
@@ -1,6 +1,9 @@
-itemGroup.mubble_items_tab=Hav-ajo Mubble
+--- CREATIVE TABS ---
 itemGroup.mubble_blocks_tab=Blokos Mubble
+itemGroup.mubble_items_tab=Hav-ajo Mubble
+itemGroup.mubble_costumes_tab=<newline>
 
+--- BLOCKS ---
 tile.vanadium_block.name=Bloko di vanadio
 tile.vanadium_ore.name=Erco di vanadio
 tile.red_bricks.name=Briki reda
@@ -19,6 +22,19 @@ tile.brick_block.name=Bloko briko
 tile.golden_brick_block.name=Bloko briko oro
 tile.note_block.name=Bloko noto
 tile.super_note_block.name=Bloko figuranto noto
+tile.fire_flower.name=<newline>
+tile.ice_flower.name=<newline>
+tile.boomerang_flower.name=<newline>
+tile.cloud_flower.name=<newline>
+tile.cloud_block.name=<newline>
+tile.blue_mushroom.name=<newline>
+tile.green_mushroom.name=<newline>
+tile.yellow_mushroom.name=<newline>
+tile.purple_mushroom.name=<newline>
+tile.blue_mushroom_block.name=<newline>
+tile.green_mushroom_block.name=<newline>
+tile.yellow_mushroom_block.name=<newline>
+tile.purple_mushroom_block.name=<newline>
 
 tile.blue_tetris_block.name=Bloko Tetris blua
 tile.light_blue_tetris_block.name=Bloko Tetris klara blua
@@ -39,6 +55,15 @@ tile.cyan_bricks.name=Briko ciana
 tile.elder_pebbles.name=Senioro stoneto
 tile.space_matter.name=Materio spaco
 
+tile.vampire_stone.name=<newline>
+tile.medusa_stone.name=<newline>
+tile.medusa_bricks.name=<newline>
+tile.blue_candy_cane_pillar.name=<newline>
+tile.green_candy_cane_pillar.name=<newline>
+tile.yellow_candy_cane_pillar.name=<newline>
+tile.red_candy_cane_pillar.name=<newline>
+
+--- ITEMS ---
 item.vanadium.name=Vanadio
 item.wheat_flour.name=Farino di frumento 
 item.caramel_cube.name=Kubo di karamelo
@@ -48,28 +73,57 @@ item.caramel_crepe.name=Krepo di karamelo
 
 item.super_mushroom.name=Champiniono figuranto
 item.peach.name=Persiko
+item.cape_feather.name=<newline>
 item.super_star.name=Stelo figuranto
 item.yellow_coin.name=Moneto flava
 item.red_coin.name=Moneto reda
 item.blue_coin.name=Moneto blua
 item.cappy.name=Cappy
+item.luigi_cap.name=<newline>
+item.wario_cap.name=<newline>
+item.waluigi_cap.name=<newline>
+item.invisibility_cap.name=<newline>
+item.wing_cap.name=<newline>
+item.princess_peach_crown.name=<newline>
+item.princess_daisy_crown.name=<newline>
+item.super_crown.name=<newline>
 
+item.bandana.name=<newline>
+
+item.smash_ball.name=<newline>
+
+item.headphones.name=<newline>
+item.record_blank.name=<newline>
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.ebb_flow_demo.desc=Splatoon 2 - Ebb & Flow Demo
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
+item.mayro_cap.name=<newline>
+item.noteblock_head.name=<newline>
+item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
+item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
+item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
+item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
+
+--- ENTITIES ---
 entity.toad.name=Toad
+entity.chincho.name=<newline>
 
+--- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=Bloko ? falas champiniono figuranto
 subtitles.block.question_block.loot.coin=Bloko ? falas moneto
+subtitles.item.cape_feather.use=<newline>
+subtitles.item.smash_ball.use=<newline>
 subtitles.entity.toad.ambient=Toad murmura
 subtitles.entity.toad.hurt=Toad doloranta
 subtitles.entity.toad.death=Toad mortanta
 
-advancements.mubble.root.title=Mubble
-advancements.mubble.root.description=A grand new journey
-advancements.mubble.get_coin.title=It's mine! Gold!
-advancements.mubble.get_coin.description=Find coins
-advancements.mubble.get_vanadium.title=Vanadiums!
-advancements.mubble.get_vanadium.description=Acquire vanadiums
-advancements.mubble.get_tetris_block.title=It's All Connected
-advancements.mubble.get_tetris_block.description=Get your hand on a bloko Tetris
+--- ADVANCEMENTS ---
+advancements.mubble.root.title=<newline>
+advancements.mubble.root.description=<newline>
+advancements.mubble.get_coin.title=<newline>
+advancements.mubble.get_coin.description=<newline>
+advancements.mubble.get_vanadium.title=<newline>
+advancements.mubble.get_vanadium.description=<newline>
+advancements.mubble.get_tetris_block.title=<newline>
+advancements.mubble.get_tetris_block.description=<newline>
