--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -63,6 +63,8 @@ tile.green_candy_cane_pillar.name=<newline>
 tile.yellow_candy_cane_pillar.name=<newline>
 tile.red_candy_cane_pillar.name=<newline>
 
+tile.koretato_block.name=<newline>
+
 --- ITEMS ---
 item.vanadium.name=shiny purple
 item.wheat_flour.name=wet floor
@@ -70,6 +72,7 @@ item.caramel_cube.name=tiny caraml boii
 item.crepe.name=creeepe
 item.chocolate_crepe.name=crepe + choco
 item.caramel_crepe.name=crepe + caraml good
+item.candy_cane.name=<newline>
 
 item.super_mushroom.name=SUPA MUSH
 item.peach.name=salty peesh very gud
@@ -91,6 +94,7 @@ item.super_crown.name=waifu creator
 item.bandana.name=banana
 
 item.smash_ball.name=sm4sh bol
+
 item.headphones.name=<newline>
 item.record_blank.name=<newline>
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
