--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -50,6 +50,12 @@ tile.space_matter.name=太空物质
 tile.vampire_stone.name=<newline>
 tile.medusa_stone.name=<newline>
 tile.medusa_bricks.name=<newline>
+tile.blue_candy_cane_pillar.name=<newline>
+tile.green_candy_cane_pillar.name=<newline>
+tile.yellow_candy_cane_pillar.name=<newline>
+tile.red_candy_cane_pillar.name=<newline>
+
+tile.koretato_block.name=<newline>
 
 --- ITEMS ---
 item.vanadium.name=钒
@@ -58,7 +64,6 @@ item.caramel_cube.name=焦糖块
 item.crepe.name=可丽饼
 item.chocolate_crepe.name=巧克力可丽饼
 item.caramel_crepe.name=焦糖可丽饼
-item.headphones.name=<newline>
 
 item.super_mushroom.name=超级蘑菇
 item.peach.name=桃子
@@ -76,12 +81,14 @@ item.bandana.name=<newline>
 
 item.smash_ball.name=<newline>
 
-item.noteblock_head.name=<newline>
-
+item.headphones.name=<newline>
 item.record_blank.name=<newline>
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
 item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
 item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
+
+item.mayro_cap.name=<newline>
+item.noteblock_head.name=<newline>
 item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
 item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
 item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
